# pytspack

./: .gitignore  LICENSE  README.md  meta.yaml  mkdocs.yml  pyproject.toml  setup.py  tspack.pyf  tspline.py
.github/workflows/: ci.yml
docs/: api.md  index.md
pytspack/: __init__.py  renka.c  renka.h  renka_spherical.h  renka_srfpack.c  renka_ssrfpack.c  renka_stripack.c  renka_tripack.c  srfpack.c  srfpack.h  ssrfpack.c  stripack.h  tripack.h  tspack.c  tspack.h  tspack.pyf
renka/: __init__.py  renka.py  srfpack.h  ssrfpack.h
src/: renka.c  ssrfpack.c  stripack.c  stripack.h  tripack.c  tspack.h
tests/: test_benchmark.py  test_dask_xarray.py  test_new_api.py  test_pytspack.py  test_renka.py  test_spherical_mesh.py  test_tspack.py
tspack/: tspack.f  tspack.info  tspack.pyf  tspack.txt  tspline.py
